[package]
name = "media-http"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP media response planning helpers for UPnP/DLNA serving"
categories = ["multimedia", "network-programming"]
keywords = ["http", "range", "dlna", "media"]

[features]
default = []
std = []

[dependencies]
dlna-core = { path = "../dlna-core", default-features = false }

[[bench]]
name = "range"
harness = false
